PR/52386: Use the number of iterations we document.